2006-05-30  Andrew Cagney  <cagney@redhat.com>

	* TasksObserver.java: New file.
	* TestTasksObserver.java: Update.
	* Proc.java (requestAddTasksObserver): Delete.
	* ProcState.java (handleAddTasksObserver): Delete.
	
	* TaskObserver.java (Forked): Add method updateForkedOffspring.
	(Cloned): Add method updateClonedOffspring.
	* TestTaskObserverBlocked.java: Handle updateForkedOffspring, and
	updateClonedOffspring.
	* TestTaskObserverDetach.java: Ditto.
	* TestTaskForkedObserver.java: Handle updateForkedOffspring.
	* TestTaskClonedObserver.java: Handle updateClonedOffspring.
	* TaskState.java: Generate notifyForkedOffspring, and
	notifyClonedOffspring events.
	* Task.java (id, proc): Make final.
	(creator): New member.
	(Task): Initialize creator.
	(notifyClonedOffspring, notifyForkedOffspring): New.
	* ProcState.java ("detached" .handleAddTasksObserver): Add
	updateClonedOffspring to local class, block the offspring.

	* Proc.java: Make members final.
	(creator): New member.
	(host, id): Make final.
	(Proc): Initialize the creator.
	(toString): Do not print the command.
	
2006-05-29  Andrew Cagney  <cagney@redhat.com>

	* HostState.java: In log, print the Host.  Trace all state
	transitions at level FINE.

2006-05-25  Stan Cox  <scox@redhat.com>

	* Task.java: Change to FINEST.
	* ProcState.java (initial): Change to FINEST.
	(handleRemoval): Change to FINEST.
	* Proc.java: Change to FINEST.
	(performRemoval): Change to FINEST.
	(add): Change to FINEST.
	(remove): Change to FINEST.
	* HostState.java (running): Change to FINEST.
	* Host.java (add): Change to FINEST.
	(remove): Change to FINEST.

2006-05-10  Andrew Cagney  <cagney@redhat.com>

	* TaskObserver.java (Forked .updateForkedParent): Rename
	.updateForked.
	(Cloned .updateClonedParent): Rename .updateCloned.
	* Task.java (notifyForkedParent): Rename notifyForked.
	(notifyClonedParent): Rename notifyCloned.
	* ProcState.java: Update.
	* TaskState.java: Update.
	* TestTaskClonedObserver.java: Update.